--- a/ForumNew/ForumNew.WEB/Web.config
+++ b/ForumNew/ForumNew.WEB/Web.config
@@ -97,7 +97,7 @@
     <modules>
       <remove name="TelemetryCorrelationHttpModule" />
       <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" preCondition="integratedMode,managedHandler" />
-      <!--<add name="Timer" type="Forum.WEB.Modules.TimerUpdateModule" />-->
+      <add name="Timer" type="ForumNew.WEB.Modules.TimerUpdateModule" />
     </modules>
   </system.webServer>
   <entityFramework>
