--- a/ForumNew/ForumNew.WEB/packages.config
+++ b/ForumNew/ForumNew.WEB/packages.config
@@ -13,6 +13,7 @@
   <package id="jQuery.UI" version="1.12.1.1" targetFramework="net47" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net47" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net47" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.2" targetFramework="net47" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.2" targetFramework="net47" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net47" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net47" />
@@ -20,6 +21,7 @@
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net47" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net47" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net47" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.6" targetFramework="net47" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net47" />
   <package id="Microsoft.Owin" version="4.0.0" targetFramework="net47" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.0" targetFramework="net47" />
