--- a/ForumNew/ForumNew.WEB/Web.config
+++ b/ForumNew/ForumNew.WEB/Web.config
@@ -18,7 +18,7 @@
     <add name="ForumConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename='|DataDirectory|\ForumNew.mdf';Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
-    <compilation debug="true" targetFramework="4.7" />
+    <compilation debug="false" targetFramework="4.7" />
     <httpRuntime targetFramework="4.7" />
   </system.web>
   <runtime>
